Fix title alignment

--- a/style-en.css
+++ b/style-en.css
@@ -10,7 +10,7 @@
 @media screen and (max-width: 920px) {
   .steps .step .title {
     margin-right: 0;
-    margin-left: 2.5em;
+    margin-left: 1.5em;
   }
 }
 
