--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@ hr {
   }
 
   .steps .step .title {
-    margin-right: 2.5em;
+    margin-right: 1.5em;
   }
 
   .steps .step .iconContainer {
